Refactored the filesystem

--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -14,7 +14,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast">
     <div class="container-fluid">
-        <img src="icones/logo-green-no-text.png" alt="Home" width="50" height="50">
+        <img src="../icones/logo-green-no-text.png" alt="Home" width="50" height="50">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,31 +22,31 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="index.html">
-                        <img src="icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20">
+                        <img src="../icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20">
                         <span data-translate="true">Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="shop.html">
-                        <img src="icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20">
+                    <a class="nav-link textInNavBar" href="../Shop/shop.html">
+                        <img src="../icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20">
                         <span data-translate="true">Produkte</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="nutrition.html">
-                        <img src="icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20">
+                    <a class="nav-link textInNavBar" href="../Nutrition/nutrition.html">
+                        <img src="../icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20">
                         <span data-translate="true"> Ernährungspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="trainings-plan.html">
-                        <img src="icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20">
+                    <a class="nav-link textInNavBar" href="../Training/trainings-plan.html">
+                        <img src="../icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20">
                         <span data-translate="true">Trainingspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="about-us.html">
-                        <img src="icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20">
+                    <a class="nav-link textInNavBar" href="../AboutUs/about-us.html">
+                        <img src="../icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20">
                         <span data-translate="true">Über uns</span>
                     </a>
                 </li>
@@ -70,13 +70,13 @@
         <div id="mainCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="icones/leo-pitcture.jpg" class="d-block w-100" alt="Individuelles Training">
+                    <img src="../icones/leo-pitcture.jpg" class="d-block w-100" alt="Individuelles Training">
                 </div>
                 <div class="carousel-item">
-                    <img src="icones/healthy-food.jpg" class="d-block w-100" alt="Gesunde Ernährung">
+                    <img src="../icones/healthy-food.jpg" class="d-block w-100" alt="Gesunde Ernährung">
                 </div>
                 <div class="carousel-item">
-                    <img src="icones/man-trained.jpg" class="d-block w-100" alt="Persönlicher Support">
+                    <img src="../icones/man-trained.jpg" class="d-block w-100" alt="Persönlicher Support">
                 </div>
             </div>
         </div>
@@ -130,16 +130,16 @@
                     <h5 class="text-uppercase mb-4 text-in-fotter"><span data-translate="true">Unsere Welt</span></h5>
                     <ul class="list-unstyled mb-4">
                         <li>
-                            <a href="shop.html" class="hover-effects"><span data-translate="true">Produkte</span></a>
+                            <a href="../Shop/shop.html" class="hover-effects"><span data-translate="true">Produkte</span></a>
                         </li>
                         <li>
-                            <a href="trainings-plan.html" class="hover-effects"><span data-translate="true">Trainingspläne</span></a>
+                            <a href="../Training/trainings-plan.html" class="hover-effects"><span data-translate="true">Trainingspläne</span></a>
                         </li>
                         <li>
-                            <a href="nutrition.html" class="hover-effects"><span data-translate="true">Ernährungspläne</span></a>
+                            <a href="../Nutrition/nutrition.html" class="hover-effects"><span data-translate="true">Ernährungspläne</span></a>
                         </li>
                         <li>
-                            <a href="about-us.html" class="hover-effects"><span data-translate="true">Über uns</span></a>
+                            <a href="../AboutUs/about-us.html" class="hover-effects"><span data-translate="true">Über uns</span></a>
                         </li>
                     </ul>
                 </div>
@@ -158,12 +158,12 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="icones/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
+                    <img src="../icones/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
                 </div>
             </div>
         </div>
     </footer>
 </div>
-<script src="translate.js"></script>
+<script src="../All/translate.js"></script>
 </body>
 </html>
