--- a/fitness-and-health-website/Shop/shop.html
+++ b/fitness-and-health-website/Shop/shop.html
@@ -9,13 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
     <script src="shop.js"></script>
-    <script src="translate.js"></script>
+    <script src="../All/translate.js"></script>
 </head>
 <body style="background-color: #F9F4E6">
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast">
     <div class="container-fluid">
-        <img src="icones/logo-green-no-text.png" alt="Home" width="50" height="50">
+        <img src="../icones/logo-green-no-text.png" alt="Home" width="50" height="50">
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,32 +23,32 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="index.html">
-                        <img src="icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20">
+                    <a class="nav-link textInNavBar" href="../Mainpage/index.html">
+                        <img src="../icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20">
                         <span data-translate="true">Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="shop.html">
-                        <img src="icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20">
+                        <img src="../icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20">
                         <span data-translate="true">Produkte</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="nutrition.html">
-                        <img src="icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20">
+                    <a class="nav-link textInNavBar" href="../Nutrition/nutrition.html">
+                        <img src="../icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20">
                         <span data-translate="true">Ernährungspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="trainings-plan.html">
-                        <img src="icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20">
+                    <a class="nav-link textInNavBar" href="../Training/trainings-plan.html">
+                        <img src="../icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20">
                         <span data-translate="true">Trainingspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="about-us.html">
-                        <img src="icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20">
+                    <a class="nav-link textInNavBar" href="../AboutUs/about-us.html">
+                        <img src="../icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20">
                         <span data-translate="true">Über uns</span>
                     </a>
                 </li>
@@ -71,7 +71,7 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
             <div class="image-container">
-                <img src="icones/shop-picture.jpg" class="img">
+                <img src="../icones/shop-picture.jpg" class="img">
                 <div class="image-text">
                     <h1 class="picture-header" data-translate="true">Willkommen</h1>
                     <h2 class="picture-subheader" data-translate="true">Fitness&Health Produkte</h2>
@@ -80,7 +80,7 @@
         </div>
         <div class="carousel-item">
             <div class="image-container">
-                <img src="icones/background-for-shop-weights.jpg" class="img">
+                <img src="../icones/background-for-shop-weights.jpg" class="img">
                 <div class="image-text">
                     <h1 class="picture-header" data-translate="true">Willkommen</h1>
                     <h2 class="picture-subheader" data-translate="true">Fitness&Health Produkte</h2>
@@ -89,7 +89,7 @@
         </div>
         <div class="carousel-item">
             <div class="image-container">
-                <img src="icones/shop-background-picture-runners-and-weights.jpg" class="img">
+                <img src="../icones/shop-background-picture-runners-and-weights.jpg" class="img">
                 <div class="image-text">
                     <h1 class="picture-header" data-translate="true">Willkommen</h1>
                     <h2 class="picture-subheader" data-translate="true">Fitness&Health Produkte</h2>
@@ -98,7 +98,7 @@
         </div>
         <div class="carousel-item">
             <div class="image-container">
-                <img src="icones/background-shop-letters.jpg" class="img">
+                <img src="../icones/background-shop-letters.jpg" class="img">
                 <div class="image-text">
                     <h1 class="picture-header" data-translate="true">Willkommen</h1>
                     <h2 class="picture-subheader" style="font-family: sans-serif" data-translate="true">Fitness&Health Produkte</h2>
@@ -200,9 +200,9 @@
                     <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5;" data-translate="true">Unsere Welt</h5>
                     <ul class="list-unstyled mb-4">
                         <li><a href="shop.html" class="hover-effects" data-translate="true">Produkte</a></li>
-                        <li><a href="trainings-plan.html" class="hover-effects" data-translate="true">Trainingspläne</a></li>
-                        <li><a href="nutrition.html" class="hover-effects" data-translate="true">Ernährungspläne</a></li>
-                        <li><a href="about-us.html" class="hover-effects" data-translate="true">Über uns</a></li>
+                        <li><a href="../Training/trainings-plan.html" class="hover-effects" data-translate="true">Trainingspläne</a></li>
+                        <li><a href="../Nutrition/nutrition.html" class="hover-effects" data-translate="true">Ernährungspläne</a></li>
+                        <li><a href="../AboutUs/about-us.html" class="hover-effects" data-translate="true">Über uns</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
@@ -218,7 +218,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="icones/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
+                    <img src="../icones/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
                 </div>
             </div>
         </div>
