--- a/fitness-and-health-website/AboutUs/about-us.html
+++ b/fitness-and-health-website/AboutUs/about-us.html
@@ -14,7 +14,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast" >
     <div class="container-fluid">
 
-        <img src="icones/logo-green-no-text.png" alt="Home" width="50" height="50">
+        <img src="../icones/logo-green-no-text.png" alt="Home" width="50" height="50">
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,28 +22,28 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="index.html">
-                        <img src="icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20"> Home
+                    <a class="nav-link textInNavBar" href="../Mainpage/index.html">
+                        <img src="../icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20"> Home
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar"  href="shop.html">
-                        <img src="icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> Produkte
+                    <a class="nav-link textInNavBar"  href="../Shop/shop.html">
+                        <img src="../icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> Produkte
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="nutrition.html">
-                        <img src="icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20"> Ernährungspläne
+                    <a class="nav-link textInNavBar" href="../Nutrition/nutrition.html">
+                        <img src="../icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20"> Ernährungspläne
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="trainings-plan.html">
-                        <img src="icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20"> Trainingspläne
+                    <a class="nav-link textInNavBar" href="../Training/trainings-plan.html">
+                        <img src="../icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20"> Trainingspläne
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="about-us.html">
-                        <img src="icones/bxs-group.svg"  class="changeColor" alt="Über uns" width="20" height="20"> Über uns
+                        <img src="../icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20"> Über uns
                     </a>
                 </li>
             </ul>
@@ -58,7 +58,7 @@
     <div class="row align-items-center mb-5">
         <div class="col-md-4 text-center">
             <button class="btn styleForButtonInAboutUsLeft">
-                <img src="icones/JanBild.png" alt="Jan picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
+                <img src="../icones/JanBild.png" alt="Jan picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
                 <p class="styleForPInAboutUs">Jan Brunner<br>Projektleiter</p>
             </button>
         </div>
@@ -91,7 +91,7 @@
     <div class="row align-items-center mb-5">
         <div class="col-md-4 text-center">
             <button class="btn styleForButtonInAboutUsLeft">
-                <img src="icones/ErnadPhoto.jpg" alt="Ernad picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
+                <img src="../icones/ErnadPhoto.jpg" alt="Ernad picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
                 <p class="styleForPInAboutUs">Ernad Music<br>Mitarbeiter</p>
             </button>
         </div>
@@ -108,7 +108,7 @@
     <div class="row align-items-center mb-5 flex-md-row-reverse">
         <div class="col-md-4 text-center">
             <button class="btn styleForButtonInAboutUsRight">
-                <img src="icones/MarioBild.jpg" alt="Mario picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
+                <img src="../icones/MarioBild.jpg" alt="Mario picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
                 <p class="styleForPInAboutUs">Mario Solomun<br>Mitarbeiter</p>
             </button>
         </div>
@@ -135,13 +135,13 @@
 
                     <ul class="list-unstyled mb-4">
                         <li>
-                            <a href="shop.html" class="hover-effects" >Produkte</a>
+                            <a href="../Shop/shop.html" class="hover-effects" >Produkte</a>
                         </li>
                         <li>
-                            <a href="trainings-plan.html" class="hover-effects" >Trainingspläne</a>
+                            <a href="../Training/trainings-plan.html" class="hover-effects" >Trainingspläne</a>
                         </li>
                         <li>
-                            <a href="nutrition.html" class="hover-effects">Ernährungspläne</a>
+                            <a href="../Nutrition/nutrition.html" class="hover-effects">Ernährungspläne</a>
                         </li>
                         <li>
                             <a href="about-us.html" class="hover-effects">Über uns</a>
@@ -176,7 +176,7 @@
                 </div>
                 <!--Grid column-->
                 <div class = "col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="icones/logo-green-no-text.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
+                    <img src="../icones/logo-green-no-text.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
                 </div>
             </div>
             <!--Grid row-->
