--- a/fitness-and-health-website/Training/trainings-plan.html
+++ b/fitness-and-health-website/Training/trainings-plan.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet-training-plans.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src = "../All/translate.js"></script>
 </head>
 <body>
 <!-- Sticky Top Bar -->
@@ -44,6 +45,15 @@
                     <a class="nav-link textInNavBar" href="../AboutUs/about-us.html">
                         <img src="../icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20"> Über uns
                     </a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle textInNavBar" href="#" id="navbarLanguageDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <span data-translate="true">Sprache</span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarLanguageDropdown">
+                        <li><a class="dropdown-item" href="#" onclick="setLanguage('de')">Deutsch</a></li>
+                        <li><a class="dropdown-item" href="#" onclick="setLanguage('en')">English</a></li>
+                    </ul>
                 </li>
             </ul>
         </div>
