Changed the headers in the navbar

--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -23,7 +23,7 @@
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="index.html">
                         <img src="../icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20">
-                        <span data-translate="true">Home</span>
+                        <span data-translate="true">Startseite</span>
                     </a>
                 </li>
                 <li class="nav-item">
