Now I have changed the shop, so you can choose what price and which category the product should have.

--- a/fitness-and-health-website/Shop/shop.html
+++ b/fitness-and-health-website/Shop/shop.html
@@ -135,10 +135,10 @@
                             <option value="" disabled selected data-translate="true">Wähle eine Kategorie</option>
                             <option value="supplemente" data-translate="true">Supplemente</option>
                             <option value="fitness" data-translate="true">Fitnessgeräte</option>
-                            <option value="ernaehrung" data-translate="true">Ernährungspläne</option>
+
                         </select>
                     </div>
-                    <button type="submit" class="btn btn-custom w-100" data-translate="true">Absenden</button>
+                    <button type="submit" class="btn btn-custom w-100" data-translate="true" id = "submit-button" onclick="">Absenden</button>
                 </form>
             </div>
         </div>
