added a link to the cards

--- a/fitness-and-health-website/Shop/shop.html
+++ b/fitness-and-health-website/Shop/shop.html
@@ -185,8 +185,14 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-translate="true">Schließen</button>
-                <button type="button" class="btn btn-primary add-to-cart" data-translate="true">In den Warenkorb</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Schließen</button>
+                <a id="buyLink"
+                   href="#"
+                target="_blank"
+                class="btn btn-success"
+                style="display: none;">
+                <i class="fas fa-shopping-cart me-2"></i>
+                <span id="buyLinkText">Zum Shop</span>
             </div>
         </div>
     </div>
