--- a/fitness-and-health-website/Nutrition/nutrition.html
+++ b/fitness-and-health-website/Nutrition/nutrition.html
@@ -10,6 +10,7 @@
     <script src="Calculator.js"></script>
     <script src="Loader.js"></script>
     <script src="nutrition.js"></script>
+    <script src="food-recommender.js"></script>
     <script src="../All/translate.js"></script>
     <title>Ernährung</title>
 
@@ -120,7 +121,8 @@
                     <span data-translate="true"><textarea class="form-control" id="additional-info" rows="3" placeholder="z. B. Allergien, Unverträglichkeiten oder spezielle Ernährungsbedürfnisse" style="font-family: sans-serif"></textarea></span>
                 </div>
 
-                <button type="button" class="btn btn-custom w-100" onclick="getNutritionPlanFromAI()" style="color: black"><span data-translate="true">Absenden</span></button>
+                <button type="button" id="submitBtn" class="btn btn-custom w-100" onclick="getNutritionPlanFromAI()" style="color: black"><span data-translate="true">Absenden</span></button>
+                <div id="statusMessage" class="mt-3 text-center" style="min-height: 1.5em;"></div>
             </form>
         </div>
 
@@ -149,7 +151,9 @@
 
 </div>
 
+<div id="foodRecomTableContainer" class="container my-5">
 
+</div>
 <div class="container my-" style="margin-top: 5%; margin-bottom: 5%">
 
     <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
