--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -12,7 +12,7 @@
 </head>
 <body style="background-color: #F9F4E6">
 
-<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast">
+<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed ">
     <div class="container-fluid">
         <img src="../icones/logo-green-no-text.png" alt="Home" width="50" height="50">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -123,7 +123,7 @@
 </div>
 
 <div class="container my-5" style="margin-top: 5%; margin-bottom: 5%">
-    <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
+    <footer class="text-center text-lg-start border mt-xl-5 pt-4 " style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); background-color: #2A1A14">
         <div class="container p-4">
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
