added a disclaimer when first opening the website to reduce our liability

--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -193,8 +193,29 @@
         </div>
     </footer>
 </div>
+
+<div class="modal fade" id="disclaimerModal" tabindex="-1" aria-labelledby="disclaimerModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="disclaimerModalLabel"><span data-translate="true">Wichtiger Hinweis</span></h5>
+            </div>
+            <div class="modal-body">
+                <p><span data-translate="true">Die auf dieser Website bereitgestellten Informationen, einschließlich Ernährungs- und Trainingspläne sowie Produktempfehlungen, werden teilweise durch künstliche Intelligenz generiert und dienen ausschließlich zu Informations- und Bildungszwecken.</span></p>
+                <p><span data-translate="true">Diese Informationen stellen keine medizinische Beratung, Diagnose oder Behandlung dar und sind kein Ersatz für die Konsultation mit qualifiziertem Fachpersonal (Ärzte, registrierte Ernährungsberater usw.).</span></p>
+                <p><span data-translate="true">Konsultieren Sie immer einen Arzt oder einen anderen qualifizierten Gesundheitsdienstleister, bevor Sie gesundheitliche Entscheidungen treffen oder Änderungen an Ihrer Ernährung, Ihrem Trainingsprogramm oder Ihrer Supplementierung vornehmen.</span></p>
+                <p><strong><span data-translate="true">Die Nutzung der Website und der hierin enthaltenen Informationen erfolgt auf Ihr eigenes Risiko. Die Betreiber dieser Website übernehmen keine Haftung für Ergebnisse, die sich aus der Nutzung der bereitgestellten Informationen ergeben.</span></strong></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn" id="acceptDisclaimerBtn"><span data-translate="true">Ich verstehe und akzeptiere</span></button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="../All/detected.js"></script>
 <script src="../All/translate.js"></script>
+<script src="disclaimer.js"></script>
 </body>
 
 </html>
